authenticate styles fix z-index ios

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -39,7 +39,7 @@
 
 .overlay-tn.popup-tn {
   position: fixed;
-  z-index: 9000;
+  z-index: 1300;
 }
 
 .overlay-tn.popup-tn.bottom-right {
@@ -120,7 +120,7 @@
   border: 0;
   border-radius: 54px;
   cursor: pointer;
-  z-index: 999;
+  z-index: 1300;
   position: absolute;
   display: flex;
   align-items: center;
@@ -253,7 +253,7 @@
   position: absolute;
   bottom: 74px;
   box-shadow: 0 2px 4px 0 rgba(103, 103, 103, 0.5);
-  z-index: 888;
+  z-index: 1300;
 }
 
 .overlay-tn.inline-tn .overlay-content-tn {
